--- a/app/style.css
+++ b/app/style.css
@@ -29,3 +29,14 @@ h1 {
     border-radius: 5px;
     font-family: 'Muli'
 }
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('assets/preloader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
