--- a/app/style.css
+++ b/app/style.css
@@ -2,27 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Muli);
 @import url(https://fonts.googleapis.com/css?family=Roboto:500,700);
 
-body {
-    padding-top: 50px;
-}
-
-#bg-img {
-    background: url("assets/nabeel-syed-2856.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-color: hsla(0,0%,100%,0.3);
-    background-blend-mode: overlay;
-}
-
-#bg-img2 {
-    background-image: url("assets/traffic.jpeg");
-    background-size: cover;
-    background-color: hsla(0,0%,100%,0.3);
-    background-blend-mode: overlay;
-    background-repeat: no-repeat;  
-}
 
 h1 {
     text-align: center;
@@ -44,19 +23,35 @@ h2 {
     color: #0a2247;
 }
 
-label {
-    font-family: "Inconsolata", serif;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 58px;
-    color: #193323;
+.fa {
+    padding-right: 7px;
+}
+
+/* Backgroud image of index page */
+#bg-img {
+    background: url("assets/nabeel-syed-2856.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: hsla(0,0%,100%,0.3);
+    background-blend-mode: overlay;
+}
+
+/* Background image of ptb page */
+#bg-img2 {
+    background-image: url("assets/traffic.jpeg");
+    background-size: cover;
+    background-color: hsla(0,0%,100%,0.3);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;  
 }
 
 .container {
-    padding-top: 150px;
+    padding-top: 180px;
 }
 
-.btn {
+.btn-index {
     display: block;
     margin: 20px auto;
     width: 300px;
@@ -66,6 +61,11 @@ label {
     font-family: 'Muli'
 }
 
+.btn-back {
+    margin: 10px;
+}
+
+/* Loader for raw data page */
 .loader {
     position: fixed;
     left: 0px;
@@ -77,7 +77,36 @@ label {
     opacity: .8;
 }
 
+
+/* Table format */
+table {
+    margin-left: 10px;
+    font-family: 'Muli', sans-serif;
+}
+
+th {
+    background-color: #337AB7;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #e0e0e0;
+}
+
+/* Pivot table builder */
+label {
+    font-family: "Inconsolata", serif;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 58px;
+    color: #193323;
+}
+
 .selector {
     width: 315px;
-    padding:0px 40px;
+    padding: 0px 40px;
 }
