--- a/app/style.css
+++ b/app/style.css
@@ -155,3 +155,14 @@ label {
     width: 35vw;
     margin-top: 35px;
 }
+
+
+/*******************************
+
+*  Pivot Table Page
+
+* ******************************/
+
+.ptbstr {
+    font-family: 'Muli'
+}
