--- a/app/style.css
+++ b/app/style.css
@@ -77,8 +77,7 @@ h4 {
 }
 
 .container {
-    padding-top: 180px;
-    /*padding-top: 240px;*/
+    padding-top: 28vh;
 }
 
 
@@ -137,8 +136,7 @@ tr:hover {
 * ******************************/
 
 .ptb-container {
-    padding-top: 35px;
-    /*padding-top: 80px;*/
+    padding-top: 8vh;
 }
 
 #bg-img2 {
