--- a/app/style.css
+++ b/app/style.css
@@ -181,7 +181,7 @@ label {
 * ******************************/
 
 .ptbstr {
-    font-family: 'Muli'
+    font-family: 'Muli';
 }
 
 
@@ -192,14 +192,19 @@ label {
 * ******************************/
 
 .obs-container {
-
     padding: 20px 0;
 }
 
+/*.obstext-container*/
+
 .obs-text {
     text-align: left;
-    padding-left: 30px;
-    font-family: 'Muli'
+    padding: 30px;
+    font-family: 'Muli';
+    border-style: solid;
+    border-width: 1px;
+    border-color: #7bb5e9;
+    border-radius: 16px;
 }
 
 .hypo {
@@ -207,5 +212,5 @@ label {
 }
 
 .intro {
-    font-family: 'Muli'
+    font-family: 'Muli';
 }
