--- a/app/style.css
+++ b/app/style.css
@@ -91,7 +91,7 @@ h4 {
     width: 80vw;
     overflow: scroll;
     margin: 0px auto;
-    padding-bottom: 200px;
+    padding-bottom: 50px;
 }
 
 .btn-back {
@@ -121,11 +121,11 @@ th {
     color: white;
 }
 
-tr:nth-child(even) {
+.raw-table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-tr:hover {
+.raw-table tr:hover {
     background-color: #e0e0e0;
 }
 
@@ -185,6 +185,13 @@ label {
     font-family: 'Muli';
 }
 
+.color-scale {
+    width: 100%;
+}
+
+.cs-cell {
+    width: 10vw;
+}
 
 /*******************************
 
