--- a/app/style.css
+++ b/app/style.css
@@ -202,13 +202,14 @@ label {
 * ******************************/
 
 .obs-container {
-    padding: 20px 0;
+    padding: 0;
 }
 
 .obs-text {
     text-align: left;
-    padding: 30px;
     font-family: 'Muli';
+    padding: 30px;
+    margin-bottom: 30px;
     border-style: solid;
     border-width: 1px;
     border-color: #7bb5e9;
@@ -226,4 +227,8 @@ label {
 
 .obs_image{
     width: 100%;
+}
+
+.intro-img {
+    border-radius: 6px;
 }
